--- a/app/views/selfies/_form.html.erb
+++ b/app/views/selfies/_form.html.erb
@@ -3,13 +3,10 @@
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :photo, as: :file %>
+  <div class="selfie-container">
+    <video class="selfie-video">Video stream not available.
+    </video>
+    <p class="selfie-startbutton">📸</p>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
 <% end %>
