--- a/app/views/selfies/new.html.erb
+++ b/app/views/selfies/new.html.erb
@@ -1,10 +1,15 @@
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-8 text-center m-5">
+  <div class="row justify-content-center text-center m-5">
+    <div class="col-8">
 
       <h1 class="mb-3" >Take a selfie!</h1>
 
-      <%= render 'form', selfy: @selfy %>
+      <%#= render 'form', selfy: @selfy %>
+      <div class="selfie-container">
+        <video class="selfie-video">Video stream not available.
+        </video>
+        <p class="selfie-startbutton">📸</p>
+      </div>
 
       <%= link_to 'Back', selfies_path, class: 'btn btn-primary mt-5' %>
 
