--- a/app/views/selfies/new.html.erb
+++ b/app/views/selfies/new.html.erb
@@ -6,7 +6,7 @@
 
       <%#= render 'form', selfy: @selfy %>
       <div class="selfie-container">
-        <video class="selfie-video">Video stream not available.
+        <video autoplay="" muted="" playsinline="" class="selfie-video">Video stream not available.
         </video>
         <p class="selfie-startbutton">📸</p>
       </div>
