--- a/app/views/selfies/new.html.erb
+++ b/app/views/selfies/new.html.erb
@@ -8,7 +8,8 @@
       <div class="selfie-container">
         <video autoplay="" muted="" playsinline="" class="selfie-video">Video stream not available.
         </video>
-        <p class="selfie-startbutton">📸</p>
+        <p class="selfie-btn flip">🔃</p>
+        <p class="selfie-btn start">📸</p>
       </div>
 
       <%= link_to 'Back', selfies_path, class: 'btn btn-primary mt-5' %>
